# paella

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh  pixi.toml
app/: CMakeLists.txt
jobs/: CMakeLists.txt
jobs/tvm_arcfaceresnet100/: CMakeLists.txt
jobs/tvm_densenet121/: CMakeLists.txt
jobs/tvm_googlenet/: CMakeLists.txt
jobs/tvm_inception_v3/: CMakeLists.txt
jobs/tvm_mnist/: CMakeLists.txt
jobs/tvm_mobilenet/: CMakeLists.txt
jobs/tvm_resnet18/: CMakeLists.txt
jobs/tvm_resnet34/: CMakeLists.txt
jobs/tvm_resnet50/: CMakeLists.txt
jobs/tvm_squeezenet1_1/: CMakeLists.txt
jobs/tvm_ultraface320/: CMakeLists.txt
sosp23_artifact/: gen_data_fig11_paella.sh
src/client/: CMakeLists.txt
src/job/: CMakeLists.txt
src/server/: CMakeLists.txt
tests/client/: CMakeLists.txt
tests/ipc/shm_channel/: CMakeLists.txt
tests/ipc/shm_channel/latency/: CMakeLists.txt
tests/simple/: CMakeLists.txt
