add_executable(shmc_latency_read shmc_latency_read.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read fmt rt)
add_executable(shmc_latency_write shmc_latency_write.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write fmt rt)
add_executable(shmc_latency_read_bare_atomic shmc_latency_read_bare_atomic.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_bare_atomic fmt rt)
add_executable(shmc_latency_write_bare_atomic shmc_latency_write_bare_atomic.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_bare_atomic fmt rt)
add_executable(shmc_latency_read_bare_atomic_loop shmc_latency_read_bare_atomic_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_bare_atomic_loop fmt rt)
add_executable(shmc_latency_write_bare_atomic_loop shmc_latency_write_bare_atomic_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_bare_atomic_loop fmt rt)
add_executable(shmc_latency_read_loop shmc_latency_read_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_read_loop fmt rt)
add_executable(shmc_latency_write_loop shmc_latency_write_loop.cpp $<TARGET_OBJECTS:ipc>)
target_link_libraries(shmc_latency_write_loop fmt rt)
add_executable(shmpc_latency_gpu shmpc_latency_gpu.cu)
target_link_libraries(shmpc_latency_gpu llis_job fmt rt)
